deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: divya560035
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: divya
        image: divya560035:latest
