nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: divya-service
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
      - protocol: TCP
        port: 80
        targetPort: 80
