ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: divya-ingress
spec:
  rules:
  - http:
      paths:
      - path: /divya
        pathType: Prefix
        backend:
          service:
            name: divya-service
            port:
              number: 80
